# SCFD-research

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE-COMMERCIAL.md  Makefile  POSSIBLE DIRECTION, NOT DEFINITE.txt  README.md  SCFD_STATUS.md  TODO_SPATIAL_BENCHMARKS.md  disone.txt  logic_ternary.py  pyproject.toml  robustness error message.txt  test_adaptive_maze.py  test_enhanced_logging.py  test_grid_cell_orchestrator.py  test_multi_agent_maze_progression.py  test_multi_agent_system.py  test_vector_registry_complete.py
benchmarks/: em_cartpole.py  flow_redundant.py  gray_scott.py  heat_diffusion.py  heat_diffusion_arc.py  heat_diffusion_inverse.py  heat_diffusion_mobile.py  heat_diffusion_routing.py  heat_front_tracking.py  heat_parameter_id.py  maze_solving.py  multi_agent_grid.py  multi_agent_maze.py  run_cartpole.py  run_flow_constriction.py  run_gray_scott.py  run_heat_anisotropic.py  run_heat_periodic.py  run_wave_cavity.py  run_wave_field.py  run_wave_partial.py  scfd_cartpole.py  wave_field.py  wave_field_mode_switch.py
cfg/: defaults.yaml
docs/: DIRECTIONS.md  energy_drift_audit.md
em_baseline/: __init__.py  cfg_em.yaml  diagnostics_em.py  halting.py
engine/: __init__.py  diagnostics.py  energy.py  integrators.py  ops.py  symbolizer.py  tests_engine.py
gray_scott_outputs/: gray_scott_history.npz
notebooks/: blended_cartpole_demo.ipynb
observe/: __init__.py  adapter.py  ae_predictor.py  controller.py  prototypes.py  tests_observe.py  trackers.py
orchestrator/: example.py  pipeline.py
references/: emergent_models_text.txt
run/: __init__.py  common.py  compare_scfd_vs_em.py  latency_profile.py  main_conservative.py  main_hybrid.py  main_ml_loop.py  robustness_battery.py  run_heat_arc.py  run_heat_front.py  run_heat_param_id.py  run_heat_routing.py  train_cma_flow_constriction.py  train_cma_flow_redundant.py  train_cma_gray_scott.py  train_cma_heat_anisotropic.py  train_cma_heat_arc.py  train_cma_heat_front.py  train_cma_heat_inverse.py  train_cma_heat_mobile.py  train_cma_heat_obstacle.py  train_cma_heat_param_id.py  train_cma_heat_routing.py  train_cma_scfd.py  train_cma_wave_cavity.py  train_cma_wave_mode_switch.py  train_cma_wave_partial.py
scfd_vnext/: .gitignore  PLAN.md  README.md  TODO_SPATIAL_BENCHMARKS.md  conftest.py  disone.txt  thiisonedood.md
scripts/: bootstrap.sh  meta_smoke.py  set_dt.py  update_cfg.py
tests/: test_cartpole_blend.py  test_flow_constriction.py  test_flow_cylinder.py  test_flow_redundant.py  test_flow_regime.py  test_gray_scott.py  test_heat_arc.py  test_heat_diffusion.py  test_heat_front.py  test_heat_inverse.py  test_heat_mobile.py  test_heat_obstacle.py  test_heat_param_id.py  test_heat_routing.py  test_latency_profile.py  test_orchestrator_pipeline.py  test_robustness_battery.py  test_symplectic_energy.py  test_train_cma_flow_redundant.py  test_train_cma_heat.py  test_train_cma_heat_arc.py  test_train_cma_heat_front.py  test_wave_cavity.py  (+12 more)
(+113 files in other folders)
