[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scfd-research"
version = "0.1.0"
description = "Symbolic Coherent Field Dynamics (SCFD) engine + benchmarks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Matthew Gautier" }]
license = { text = "AGPL-3.0-only or Commercial" }
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "pillow>=10.0",
  "tqdm>=4.66",
  "cma>=3.3",
  "imageio>=2.33",
  "pyyaml>=6.0",
  "scikit-image>=0.21",
  "torch>=2.1; platform_system!='Darwin' or platform_machine!='arm64'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "hypothesis>=6.103",
  "pytest-cov>=5.0",
  "ruff>=0.6.8",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "types-Pillow",
  "types-tqdm",
]

[tool.setuptools]
packages = ["engine", "observe", "utils", "em_baseline", "run", "benchmarks", "orchestrator"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","SIM"]
ignore = ["E203", "E501"]
target-version = "py310"
src = ["engine", "benchmarks", "run", "orchestrator", "utils", "tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["^notebooks/"]
mypy_path = "."

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "slow: long-running regression tests (energy drift, scheduler KS, predictability horizon)",
]
